[package]
name = "adlx"
version = "0.0.0-alpha.1"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2021"
license = "MIT"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/adlx-rs"
description = "Bindings for AMD's Device Library eXtra"
include = ["src", "LICENSE"]
categories = ["api-bindings", "external-ffi-bindings", "graphics"] # https://crates.io/category_slugs
keywords = ["amd", "adlx", "gpu"]
rust-version = "1.74"

[dependencies]
anyhow = "1.0.79"
libloading = "0.8"
windows = { version = "0.58", optional = true, features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Wdk_Graphics_Direct3D"]}

[workspace]
members = [
    "api_gen"
]

[features]
windows_rs = ["dep:windows"]
